# tarot-lena

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  fetch-logs.yml  test-302-stt.yml
backend/alembic/: env.py
backend/alembic/versions/: 202606090001_initial_schema.py  202606090002_telegram_id_bigint.py  202606090003_widen_birth_time.py  202606090004_add_usdt_wallet.py  202606090005_add_admin_users.py  202606130001_add_ui_language.py  202606130002_add_language_locked.py  202606130003_add_free_limits_month.py  202606240001_add_free_infographics_month.py  202606250001_add_gift_claimed.py  202606260001_add_landing_analytics.py  202606270001_add_referral_reward_percent.py  202607060001_add_product_usages.py  202607060002_add_product_entitlements.py  202607130001_add_leia_broadcast_settings.py
backend/app/: __init__.py  main.py
backend/app/admin_api/: __init__.py  auth.py  auth_router.py  router.py  service.py
backend/app/api/: kie_callbacks.py  landing_analytics.py  payment_pages.py  platega_callbacks.py
backend/app/bot/: audio_media.py  cards_media.py  content.py  factory.py  feature_handlers.py  formatting.py  handlers.py  helpers.py  i18n.py  i18n_ai.py  i18n_extra.py  i18n_services.py  keyboards.py  leia_handlers.py  leia_keyboards.py  leia_rich.py  leia_texts.py  media.py  middleware.py  polling.py  rich_layouts.py  rich_messages.py  states.py  streaming.py  telegram_rich.py
backend/app/core/: config.py  http.py  security.py
backend/app/database/: base.py  (+4 more)
deploy/: README.md  bootstrap-bare.sh  bootstrap-remote.sh  deploy.sh  fix-broadcast-columns.sql  nginx.bootstrap.conf  nginx.conf  nginx.ip.conf  reset-users.sql  retry-ssl.sh  setup-server.sh  setup-ssl.sh
frontend-admin/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-admin/src/: App.tsx  api.ts  styles.css
nginx/: default.conf
openspec/: progress.md  project.md
openspec/decisions/: 001-tarot-lena-product-model.md  002-tarot-lena-infrastructure.md  003-ip-only-polling.md
openspec/proposals/: tarot-lena-migration.md
platega-sdk-python/: README.md  pyproject.toml  setup.py
platega-sdk-python/platega/: __init__.py  callback.py  exceptions.py  platega.py
prompts/: astro_ru.md  numerology_ru.md  system_en.md  system_es.md  system_pt.md  system_ru.md  tarot_ru.md  zen_en.md  zen_es.md  zen_pt.md  zen_ru.md
scripts/: test_302_stt.py
site/: index.html  landing-analytics.js  legal.html
site/legal/: index.html
(+81 files in other folders)
