[project]
name = "ai-tarot-bot"
version = "0.1.0"
description = "Premium AI tarot and astrology Telegram bot platform."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.0",
    "fastapi>=0.115.0",
    "greenlet>=3.1.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.0",
    "reportlab>=4.2.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["backend"]
