[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platega"
version = "1.0.0"
description = "Python SDK for Platega.io payment system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lantos", email = "me@lantos.in"}
]
keywords = ["platega", "payment", "gateway", "sdk", "api", "sbp", "cards", "crypto"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "mypy", "ruff"]

[project.urls]
Homepage = "https://platega.io"
Documentation = "https://docs.platega.io/"

[tool.setuptools.packages.find]
include = ["platega*"]

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
